@@ -17,6 +17,8 @@ use Debbugs::CGI qw(html_escape);
 use Debbugs::Control qw(:archive :log);
 use Debbugs::Log qw(:misc);
 
+use Mail::RFC822::Address;
+
 $lib_path = $gLibPath;
 require "$lib_path/errorlib";
 $ENV{'PATH'} = $lib_path.':'.$ENV{'PATH'};
@@ -636,7 +638,11 @@ END
         if ($ref =~ m/^-\d+$/ && defined $clonebugs{$ref}) {
             $ref = $clonebugs{$ref};
         }
-        if (&getbug) {
+	if (not Mail::RFC822::Address::valid($newsubmitter)) {
+	     transcript("$newsubmitter is not a valid e-mail address; not changing submitter\n");
+	     $errors++;
+	}
+        elsif (&getbug) {
             if (&checkpkglimit) {
                 &foundbug;
                 &addmaintainers($data);
